// Vitest Snapshot v1

exports[`generateRouteRecord > adds children and name when folder and component exist 1`] = `
"[
  {
    path: '/a',
    name: '/a',
    component: () => import('a.vue'),
    /* no props */
    children: [
      {
        path: 'c',
        name: '/a/c',
        component: () => import('a/c.vue'),
        /* no props */
        /* no children */
      }
    ],
  },
  {
    path: '/b',
    /* no name */
    /* no component */
    /* no props */
    children: [
      {
        path: 'c',
        name: '/b/c',
        component: () => import('b/c.vue'),
        /* no props */
        /* no children */
      }
    ],
  },
  {
    path: '/d',
    name: '/d',
    component: () => import('d.vue'),
    /* no props */
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > correctly names index.vue files 1`] = `
"[
  {
    path: '/',
    name: '/',
    component: () => import('index.vue'),
    /* no props */
    /* no children */
  },
  {
    path: '/b',
    /* no name */
    /* no component */
    /* no props */
    children: [
      {
        path: '',
        name: '/b/',
        component: () => import('b/index.vue'),
        /* no props */
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > generate custom imports 1`] = `
"[
  {
    path: '/a',
    name: '/a',
    component: _page_a_vue,
    /* no props */
    /* no children */
  },
  {
    path: '/b',
    name: '/b',
    component: () => import('b.vue'),
    /* no props */
    /* no children */
  },
  {
    path: '/nested',
    /* no name */
    /* no component */
    /* no props */
    children: [
      {
        path: 'file',
        /* no name */
        /* no component */
        /* no props */
        children: [
          {
            path: 'c',
            name: '/nested/file/c',
            component: () => import('nested/file/c.vue'),
            /* no props */
            /* no children */
          }
        ],
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > generate custom imports 2`] = `
Map {
  "a.vue" => "_page_a_vue",
}
`;

exports[`generateRouteRecord > generate static imports 1`] = `
"[
  {
    path: '/a',
    name: '/a',
    component: _page_a_vue,
    /* no props */
    /* no children */
  },
  {
    path: '/b',
    name: '/b',
    component: _page_b_vue,
    /* no props */
    /* no children */
  },
  {
    path: '/nested',
    /* no name */
    /* no component */
    /* no props */
    children: [
      {
        path: 'file',
        /* no name */
        /* no component */
        /* no props */
        children: [
          {
            path: 'c',
            name: '/nested/file/c',
            component: _page_nested_file_c_vue,
            /* no props */
            /* no children */
          }
        ],
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > generate static imports 2`] = `
Map {
  "a.vue" => "_page_a_vue",
  "b.vue" => "_page_b_vue",
  "nested/file/c.vue" => "_page_nested_file_c_vue",
}
`;

exports[`generateRouteRecord > handles multiple named views 1`] = `
"[
  {
    path: '/foo',
    name: '/foo',
    components: {
      'default': () => import('foo.vue'),
      'a': () => import('foo@a.vue'),
      'b': () => import('foo@b.vue')
    },
    /* no props */
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > handles non nested routes 1`] = `
"[
  {
    path: '/users',
    name: '/users',
    component: () => import('users.vue'),
    /* no props */
    children: [
      {
        path: '',
        name: '/users/',
        component: () => import('users/index.vue'),
        /* no props */
        /* no children */
      },
      {
        path: ':id',
        name: '/users/[id]',
        component: () => import('users/[id].vue'),
        /* no props */
        children: [
          {
            path: '',
            name: '/users/[id]/',
            component: () => import('users/[id]/index.vue'),
            /* no props */
            /* no children */
          },
          {
            path: 'other',
            name: '/users/[id]/other',
            component: () => import('users/[id]/other.vue'),
            /* no props */
            /* no children */
          }
        ],
      },
      {
        path: ':id/not-nested',
        name: '/users/[id].not-nested',
        component: () => import('users/[id].not-nested.vue'),
        /* no props */
        /* no children */
      },
      {
        path: 'other',
        name: '/users/other',
        component: () => import('users/other.vue'),
        /* no props */
        /* no children */
      }
    ],
  },
  {
    path: '/users/:id/also-not-nested',
    name: '/users.[id].also-not-nested',
    component: () => import('users.[id].also-not-nested.vue'),
    /* no props */
    /* no children */
  },
  {
    path: '/users/not-nested',
    name: '/users.not-nested',
    component: () => import('users.not-nested.vue'),
    /* no props */
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > handles single named views 1`] = `
"[
  {
    path: '/foo',
    name: '/foo',
    components: {
      'a': () => import('foo@a.vue')
    },
    /* no props */
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > names > creates multi word names 1`] = `
"[
  {
    path: '/',
    name: '/',
    component: () => import('index.vue'),
    /* no props */
    /* no children */
  },
  {
    path: '/my-users',
    name: '/my-users',
    component: () => import('my-users.vue'),
    /* no props */
    /* no children */
  },
  {
    path: '/MyPascalCaseUsers',
    name: '/MyPascalCaseUsers',
    component: () => import('MyPascalCaseUsers.vue'),
    /* no props */
    /* no children */
  },
  {
    path: '/some-nested',
    /* no name */
    /* no component */
    /* no props */
    children: [
      {
        path: 'file-with-:id-in-the-middle',
        name: '/some-nested/file-with-[id]-in-the-middle',
        component: () => import('some-nested/file-with-[id]-in-the-middle.vue'),
        /* no props */
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > names > creates single word names 1`] = `
"[
  {
    path: '/',
    name: '/',
    component: () => import('index.vue'),
    /* no props */
    /* no children */
  },
  {
    path: '/about',
    name: '/about',
    component: () => import('about.vue'),
    /* no props */
    /* no children */
  },
  {
    path: '/users',
    /* no name */
    /* no component */
    /* no props */
    children: [
      {
        path: '',
        name: '/users/',
        component: () => import('users/index.vue'),
        /* no props */
        /* no children */
      },
      {
        path: ':id',
        name: '/users/[id]',
        component: () => import('users/[id].vue'),
        /* no props */
        children: [
          {
            path: 'edit',
            name: '/users/[id]/edit',
            component: () => import('users/[id]/edit.vue'),
            /* no props */
            /* no children */
          }
        ],
      },
      {
        path: 'new',
        name: '/users/new',
        component: () => import('users/new.vue'),
        /* no props */
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > names > works with nested views 1`] = `
"[
  {
    path: '/',
    name: '/',
    component: () => import('index.vue'),
    /* no props */
    /* no children */
  },
  {
    path: '/users',
    name: '/users',
    component: () => import('users.vue'),
    /* no props */
    children: [
      {
        path: '',
        name: '/users/',
        component: () => import('users/index.vue'),
        /* no props */
        /* no children */
      },
      {
        path: ':id',
        name: '/users/[id]',
        component: () => import('users/[id].vue'),
        /* no props */
        children: [
          {
            path: 'edit',
            name: '/users/[id]/edit',
            component: () => import('users/[id]/edit.vue'),
            /* no props */
            /* no children */
          }
        ],
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > nested children 1`] = `
"[
  {
    path: '/a',
    /* no name */
    /* no component */
    /* no props */
    children: [
      {
        path: 'a',
        name: '/a/a',
        component: () => import('a/a.vue'),
        /* no props */
        /* no children */
      },
      {
        path: 'b',
        name: '/a/b',
        component: () => import('a/b.vue'),
        /* no props */
        /* no children */
      },
      {
        path: 'c',
        name: '/a/c',
        component: () => import('a/c.vue'),
        /* no props */
        /* no children */
      }
    ],
  },
  {
    path: '/b',
    /* no name */
    /* no component */
    /* no props */
    children: [
      {
        path: 'b',
        name: '/b/b',
        component: () => import('b/b.vue'),
        /* no props */
        /* no children */
      },
      {
        path: 'c',
        name: '/b/c',
        component: () => import('b/c.vue'),
        /* no props */
        /* no children */
      },
      {
        path: 'd',
        name: '/b/d',
        component: () => import('b/d.vue'),
        /* no props */
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > nested children 2`] = `
"[
  {
    path: '/a',
    /* no name */
    /* no component */
    /* no props */
    children: [
      {
        path: 'a',
        name: '/a/a',
        component: () => import('a/a.vue'),
        /* no props */
        /* no children */
      },
      {
        path: 'b',
        name: '/a/b',
        component: () => import('a/b.vue'),
        /* no props */
        /* no children */
      },
      {
        path: 'c',
        name: '/a/c',
        component: () => import('a/c.vue'),
        /* no props */
        /* no children */
      }
    ],
  },
  {
    path: '/b',
    /* no name */
    /* no component */
    /* no props */
    children: [
      {
        path: 'b',
        name: '/b/b',
        component: () => import('b/b.vue'),
        /* no props */
        /* no children */
      },
      {
        path: 'c',
        name: '/b/c',
        component: () => import('b/c.vue'),
        /* no props */
        /* no children */
      },
      {
        path: 'd',
        name: '/b/d',
        component: () => import('b/d.vue'),
        /* no props */
        /* no children */
      }
    ],
  },
  {
    path: '/c',
    name: '/c',
    component: () => import('c.vue'),
    /* no props */
    /* no children */
  },
  {
    path: '/d',
    name: '/d',
    component: () => import('d.vue'),
    /* no props */
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > route block > adds meta data 1`] = `
"[
  {
    path: '/',
    name: '/',
    component: () => import('index.vue'),
    /* no props */
    /* no children */
    meta: {
      \\"auth\\": true,
      \\"title\\": \\"Home\\"
    }
  }
]"
`;

exports[`generateRouteRecord > route block > handles named views with empty route blocks 1`] = `
"[
  {
    path: '/',
    name: '/',
    components: {
      'default': () => import('index.vue'),
      'named': () => import('index@named.vue')
    },
    /* no props */
    /* no children */
    meta: {
      \\"auth\\": true,
      \\"title\\": \\"Home\\"
    }
  }
]"
`;

exports[`generateRouteRecord > route block > merges deep meta properties 1`] = `
"[
  {
    path: '/',
    name: '/',
    component: () => import('index.vue'),
    /* no props */
    /* no children */
    meta: {
      \\"a\\": {
        \\"one\\": 1,
        \\"two\\": 1
      },
      \\"b\\": {
        \\"a\\": [
          2,
          3
        ]
      }
    }
  }
]"
`;

exports[`generateRouteRecord > route block > merges multiple meta properties 1`] = `
"[
  {
    path: '/custom',
    name: 'hello',
    component: () => import('index.vue'),
    /* no props */
    /* no children */
    meta: {
      \\"one\\": true,
      \\"two\\": true
    }
  }
]"
`;

exports[`generateRouteRecord > route block > merges regardless of order 1`] = `
"[
  {
    path: '/',
    name: 'b',
    component: () => import('index.vue'),
    /* no props */
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > works with some paths at root 1`] = `
"[
  {
    path: '/a',
    name: '/a',
    component: () => import('a.vue'),
    /* no props */
    /* no children */
  },
  {
    path: '/b',
    name: '/b',
    component: () => import('b.vue'),
    /* no props */
    /* no children */
  },
  {
    path: '/c',
    name: '/c',
    component: () => import('c.vue'),
    /* no props */
    /* no children */
  }
]"
`;
